[package]
name = "position-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
math = { workspace = true }
reflector-adapter = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
reflector-adapter = { workspace = true, features = ["testutils"] }
pair-registry = { path = "../pair-registry" }
vault = { path = "../vault" }

